# sim_CAPRI_nplayers

./: LICENSE  README.md
cpp/: .gitignore  Action.cpp  Action.hpp  CMakeLists.txt  DirectedGraph.cpp  DirectedGraph.hpp  Partition.hpp  README.md  Strategy.cpp  Strategy.hpp  StrategyN2M3.cpp  StrategyN2M3.hpp  StrategyN3M5.cpp  StrategyN3M5.hpp  UnionFind.hpp  build_fugaku.sh  main_evo.cpp  main_evo_fixation_probs_n2.cpp  main_evo_fixation_probs_n3.cpp  main_evo_n2.cpp  main_run_N2_defensibility.cpp  main_run_N3_defensibility.cpp  main_run_N4_defensibility.cpp  main_run_N4_efficiency.cpp  main_run_game_N4.cpp  run_evo_n3.sh  test_DirectedGraph.cpp  test_Strategy.cpp  test_StrategyN2M3.cpp  test_StrategyN3M5.cpp
notebooks/: .gitignore  Pipfile  evo_n2.py  evo_n3.py  fixation_prob_distribution.py  heatmap.py
oacis/: plot_abundance.py  plot_cooperation_level.py  plot_cooperation_level_n2.py  run.sh  run_n2.sh
ruby/: convert_to_automaton.rb  strategy.rb
